i'm a silly goose who forgot her little closing tags teehee

--- a/3-homepage.html
+++ b/3-homepage.html
@@ -252,10 +252,10 @@
         </div>
         
         <a class="carousel-control-prev" href="#popVideos" role="button" data-slide="prev">
-          <img src="images/arrow_black_left.png"
+          <img src="images/arrow_black_left.png">
         </a>
         <a class="carousel-control-next" href="#popVideos" role="button" data-slide="next">
-          <img src="images/arrow_black_right.png"
+          <img src="images/arrow_black_right.png">
         </a>
 
       </div>
@@ -263,7 +263,7 @@
   </section>
 
   <!--membership section-->
-  <div class="bg-membership container-fluid>
+  <div class="bg-membership container-fluid text-white text-center">
 
     <h3 class="text-white text-center">
       <span class="purple">Free </span>membership</h3>
