--- a/2-homepage.html
+++ b/2-homepage.html
@@ -252,10 +252,10 @@
         </div>
         
         <a class="carousel-control-prev" href="#popVideos" role="button" data-slide="prev">
-          <img src="images/arrow_black_left.png"
+          <img src="images/arrow_black_left.png">
         </a>
         <a class="carousel-control-next" href="#popVideos" role="button" data-slide="next">
-          <img src="images/arrow_black_right.png"
+          <img src="images/arrow_black_right.png">
         </a>
 
       </div>
