i gave it everything i had and i feel confident. goodnight

--- a/homepage.html
+++ b/homepage.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Smile School</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Smile School</title>
 
-<link rel="stylesheet" href="styles.css">
-<link rel="stylesheet" href="normalize.css">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="normalize.css">
 
-<!--Bootstrap-->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+  <!--Bootstrap-->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
 
   <div class="header-bg"> <!--header background image-->
     <header class="container-fluid">
 
-      <nav class="navbar navbar-expand-sm mx-lg-5"> <!--navbar logo-->
-        <div class="container-fluid-fmt-4 pt-3">
+      <nav class="navbar navbar-expand-sm mx-lg-5 display-inline"> <!--navbar logo-->
+
+        <div class="container-fluid mt-4 pt-3">
           <div href="#" class="d-flex flex-column flex-sm-row col-sm-6 align-items-center">
             <img src="images/smile_off.png" height="30px">                      
             <img src="images/logo.png" height="30px" class="mt-2 mt-sm-0 mx-3">
           </div>
 
           <button class="navbar-toggler d-sm-none" type="button" data-toggle="collapse" data-target="#headerNav">
-            <span class="text-white hlolberton_school-icon-menu"></span>
+            <span class="text-white holberton_school-icon-menu"></span>
           </button> <!--mobile toggle-->
 
           <div class="collapse navbar-collapse d-sm-flex col-sm-6" id="headerNav"> <!--header nav-->
@@ -44,10 +43,11 @@
       </nav>
 
       <div class="text-center">
+        <div class="wide-open-spaces"></div>
 
         <h1 class="text-white font-weight-bold display-1 text-center">Get Schooled</h1><!--title-->
         
-        <ul class="list-unstyled list-inline text-white row m-5"> <!--cheesy not-links-->
+        <ul class="list-unstyled text-white row m-5 justify-content-between"> <!--cheesy not-links-->
           <li class="col">SMILES</li>
           <li class="col">GRIN</li>
           <li class="col">LAUGH</li>
@@ -423,10 +423,10 @@
         <img src="/images/smile_off.png"  height="30px" class=>
         <img src="/images/logo.png" height="30px" class="mt-2 mt-sm-0 mx-3">
       </div>
-      <ul class="ml-auto list-inline mt-5">
-        <li class="list-inline-item holberton_school-icon-ic_facebook h3"></li>
-        <li class="list-inline-item holberton_school-icon-ic_twitter h3"></li>
-        <li class="list-inline-item holberton_school-icon-ic_instagram h3"></li>
+      <ul class="ml-auto list-inline mt-5 links-white">
+        <a href="#"><li class="list-inline-item holberton_school-icon-ic_facebook h3"></li></a>
+        <a href="#"><li class="list-inline-item holberton_school-icon-ic_twitter h3"></li></a>
+        <a href="#"><li class="list-inline-item holberton_school-icon-ic_instagram h3"></li></a>
       </ul>
     </div>
     <p class="text-muted small text-center mt-5">&#169; smileschool 2020</p>
