--- a/pricing.html
+++ b/pricing.html
@@ -76,32 +76,34 @@
 
         <div class="pt-3 row text-white">
           <div class="col-6">Unlimited access to all tutorials</div>
-          <div class="col-3 text-center holberton_school-icon-check"></div>
-          <div class="col-3 text-center holberton_school-icon-check"></div>
+          <div class="col-3 text-center text-success holberton_school-icon-check check"></div>
+          <div class="col-3 text-center text-success holberton_school-icon-check check"></div>
         </div>
+
+        <!-- <hr class="hr text-white"/> -->
 
         <div class="pt-3 row text-white">
           <div class="col-6">Access SmileSchool private forum</div>
-          <div class="col-3 text-center holberton_school-icon-check"></div>
-          <div class="col-3 text-center holberton_school-icon-check"></div>
+          <div class="col-3 text-center text-success holberton_school-icon-check check"></div>
+          <div class="col-3 text-center text-success holberton_school-icon-check check"></div>
         </div>
 
         <div class="pt-3 row text-white">
           <div class="col-6">Access Smiles contests and Smiles Analysis</div>
-          <div class="col-3 text-center holberton_school-icon-check"></div>
-          <div class="col-3 text-center holberton_school-icon-check"></div>
+          <div class="col-3 text-center text-success holberton_school-icon-check check"></div>
+          <div class="col-3 text-center text-success holberton_school-icon-check check"></div>
         </div>
 
         <div class="pt-3 row text-white">
           <div class="col-6">Access SmileSchool private forum</div>
-          <div class="col-3 text-center holberton_school-icon-check"></div>
-          <div class="col-3 text-center holberton_school-icon-check"></div>
+          <div class="col-3 text-center text-success holberton_school-icon-check check"></div>
+          <div class="col-3 text-center text-success holberton_school-icon-check check"></div>
         </div>
 
         <div class="pb-5 pt-3 row text-white">
           <div class="col-6"><img src="images/signal.png" height=30px><br>Exclusive discount on all Signal products</div>
           <div class="col-3"></div>
-          <div class="col-3 mt-3 text-center holberton_school-icon-check"></div>
+          <div class="col-3 mt-3 text-center text-success holberton_school-icon-check check"></div>
         </div>
 
         
